force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__Assessment_SubjectId_map_Account_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Assessment_SubjectId_map_Account_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment_SubjectId_map_Account_Id_N_1</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Assessment_SubjectId_map_Account_Id_N_1</relationshipLabel>
    <relationshipName>Assessment_SubjectId_map_Account_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>