force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__AssessmentContextId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentContextId__c</fullName>
    <label>Assessment Context</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentContextId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>