force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__AssessmentContextObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentContextObjectName__c</fullName>
    <label>Assessment Context Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentContextObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>