force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__AssessmentDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentDefinitionId__c</fullName>
    <label>Assessment Definition</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>