force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__AssessmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentStatus__c</fullName>
    <label>Assessment Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>