force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__AssessmentTaskName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentTaskName__c</fullName>
    <label>Assessment Task Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentTaskName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>