force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__AssessmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentType__c</fullName>
    <label>Assessment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>