force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__ParentAssessmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentAssessmentId__c</fullName>
    <label>Parent Assessment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentAssessmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>