force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__rel_1720291273324_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291273324_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment_SubjectId_map_AccountCont_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>Assessment_SubjectId_map_AccountCont_rel</relationshipLabel>
    <relationshipName>rel_1720291273324_end</relationshipName>
    <type>Lookup</type>
</CustomField>