force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__rel_1720291274049_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291274049_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment_AssessmentContextId_map_A_rel</label>
    <referenceTo>ssot__Application__dlm</referenceTo>
    <relationshipLabel>Assessment_AssessmentContextId_map_A_rel</relationshipLabel>
    <relationshipName>rel_1720291274049_end</relationshipName>
    <type>Lookup</type>
</CustomField>