force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__rel_1720291280302_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291280302_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment_ParentAssessmentId_map_As_rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>Assessment_ParentAssessmentId_map_As_rel</relationshipLabel>
    <relationshipName>rel_1720291280302_end</relationshipName>
    <type>Lookup</type>
</CustomField>