force-app/main/default/objects/ssot__Assessment__dlm/fields/ssot__SubjectObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubjectObjectName__c</fullName>
    <label>Subject Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubjectObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>